# ai-mystery-game

./: .gitignore  README.md
docs/: game-design.md
godot-game/: project.godot
godot-game/scripts/: game_manager.gd  llm_client.gd  npc.gd  player.gd  room.gd
godot-game/scripts/ui/: evidence_item.gd  hud.gd  minimap.gd
llm-server/: .env.example  fallback.py  import_model.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  server.py
pygame-game/: controller.py  main.py  requirements.txt
pygame-game/game/: client.py  constants.py  fallbacks.py  state.py
pygame-game/ui/: hud.py  map_view.py  overlays.py  screens.py  theme.py  widgets.py
training/: evaluate.py  export_gguf.py  generate_data.py  requirements-train-cuda.txt  requirements-train-rocm.txt  requirements-train.txt  train.py
training/data/: interrogations.jsonl  mystery_setups.jsonl  npc_actions.jsonl
