[project]
name = "murder-mystery-llm-server"
version = "0.1.0"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
pydantic = ">=2.0"
llama-cpp-python = ">=0.3"
python-dotenv = ">=1.0"

[project.optional-dependencies]
# Only needed for fine-tuning (training pipeline)
train = [
    "unsloth",
    "trl>=0.12",
    "datasets>=3.0",
    "transformers>=4.45",
    "torch>=2.4",
    "accelerate>=1.0",
    "openai>=1.0",   # for synthetic data generation via cloud LLM
]

[tool.ruff.lint]
select = ["E", "F", "I"]
