[project]
name = "murder-mystery-llm-server"
version = "0.1.0"
requires-python = ">=3.11"

[project.dependencies]
fastapi = ">=0.115"
uvicorn = {extras = ["standard"], version = ">=0.30"}
pydantic = ">=2.0"
python-dotenv = ">=1.0"
# Primary backend: Apple Silicon MLX (native, best performance on M-series)
mlx-lm = ">=0.20"

[project.optional-dependencies]
# Cross-platform GGUF fallback (set BACKEND=llamacpp in .env)
llamacpp = ["llama-cpp-python>=0.3"]

# Fine-tuning pipeline (run from training/ directory)
train = [
    "mlx-tune>=0.4",
    "mlx>=0.20",
    "datasets>=3.0",
    "transformers>=4.45",
    "openai>=1.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
